libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-glob-not-star.jsonc
//@ run: fail
//@ description: any ident that isn't `*` should fail
[
  "::kernel::special_form::use",
  "::math",
  "X",
  //~^ ERROR Replace with a valid import expression
  "x"
]
